cmake_minimum_required(VERSION 3.3)
project(mupdf_1_9a_source)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    docs/example.c
    docs/multi-threaded.c
    include/mupdf/fitz/annotation.h
    include/mupdf/fitz/bidi.h
    include/mupdf/fitz/bitmap.h
    include/mupdf/fitz/buffer.h
    include/mupdf/fitz/colorspace.h
    include/mupdf/fitz/compressed-buffer.h
    include/mupdf/fitz/context.h
    include/mupdf/fitz/crypt.h
    include/mupdf/fitz/device.h
    include/mupdf/fitz/display-list.h
    include/mupdf/fitz/document.h
    include/mupdf/fitz/filter.h
    include/mupdf/fitz/font.h
    include/mupdf/fitz/function.h
    include/mupdf/fitz/getopt.h
    include/mupdf/fitz/glyph-cache.h
    include/mupdf/fitz/glyph.h
    include/mupdf/fitz/hash.h
    include/mupdf/fitz/image.h
    include/mupdf/fitz/link.h
    include/mupdf/fitz/math.h
    include/mupdf/fitz/outline.h
    include/mupdf/fitz/output-pcl.h
    include/mupdf/fitz/output-png.h
    include/mupdf/fitz/output-pnm.h
    include/mupdf/fitz/output-ps.h
    include/mupdf/fitz/output-pwg.h
    include/mupdf/fitz/output-svg.h
    include/mupdf/fitz/output-tga.h
    include/mupdf/fitz/output.h
    include/mupdf/fitz/path.h
    include/mupdf/fitz/pixmap.h
    include/mupdf/fitz/pool.h
    include/mupdf/fitz/separation.h
    include/mupdf/fitz/shade.h
    include/mupdf/fitz/store.h
    include/mupdf/fitz/stream.h
    include/mupdf/fitz/string.h
    include/mupdf/fitz/structured-text.h
    include/mupdf/fitz/system.h
    include/mupdf/fitz/text.h
    include/mupdf/fitz/transition.h
    include/mupdf/fitz/tree.h
    include/mupdf/fitz/ucdn.h
    include/mupdf/fitz/unzip.h
    include/mupdf/fitz/util.h
    include/mupdf/fitz/version.h
    include/mupdf/fitz/xml.h
    include/mupdf/pdf/annot.h
    include/mupdf/pdf/appearance.h
    include/mupdf/pdf/clean.h
    include/mupdf/pdf/cmap.h
    include/mupdf/pdf/crypt.h
    include/mupdf/pdf/document.h
    include/mupdf/pdf/event.h
    include/mupdf/pdf/field.h
    include/mupdf/pdf/font.h
    include/mupdf/pdf/graft.h
    include/mupdf/pdf/interpret.h
    include/mupdf/pdf/javascript.h
    include/mupdf/pdf/name-table.h
    include/mupdf/pdf/object.h
    include/mupdf/pdf/output-pdf.h
    include/mupdf/pdf/page.h
    include/mupdf/pdf/parse.h
    include/mupdf/pdf/resource.h
    include/mupdf/pdf/widget.h
    include/mupdf/pdf/xref.h
    include/mupdf/fitz.h
    include/mupdf/html.h
    include/mupdf/memento.h
    include/mupdf/pdf-tools.h
    include/mupdf/pdf.h
    include/mupdf/xps.h
    platform/android/viewer/jni/mupdf.c
    platform/gl/gl-app.h
    platform/gl/gl-font.c
    platform/gl/gl-input.c
    platform/gl/gl-main.c
    platform/gl/gl-win32.c
    platform/ios/Classes/MuAnnotation.h
    platform/ios/Classes/MuAnnotSelectView.h
    platform/ios/Classes/MuAppDelegate.h
    platform/ios/Classes/MuChoiceFieldController.h
    platform/ios/Classes/MuDialogCreator.h
    platform/ios/Classes/MuDocRef.h
    platform/ios/Classes/MuDocumentController.h
    platform/ios/Classes/MuHitView.h
    platform/ios/Classes/MuInkView.h
    platform/ios/Classes/MuLibraryController.h
    platform/ios/Classes/MuOutlineController.h
    platform/ios/Classes/MuPageView.h
    platform/ios/Classes/MuPageViewNormal.h
    platform/ios/Classes/MuPageViewReflow.h
    platform/ios/Classes/MuPrintPageRenderer.h
    platform/ios/Classes/MuTapResult.h
    platform/ios/Classes/MuTextFieldController.h
    platform/ios/Classes/MuTextSelectView.h
    platform/ios/Classes/MuUpdater.h
    platform/ios/Classes/MuWord.h
    platform/ios/common.h
    platform/java/mupdf_native.c
    platform/java/mupdf_native.h
    platform/x11/curl_stream.c
    platform/x11/curl_stream.h
    platform/x11/jstest_main.c
    platform/x11/pdfapp.c
    platform/x11/pdfapp.h
    platform/x11/win_main.c
    platform/x11/x11_image.c
    platform/x11/x11_main.c
    scripts/freetype/slimftmodules.h
    scripts/freetype/slimftoptions.h
    scripts/jpeg/jconfig.h
    scripts/openjpeg/opj_config.h
    scripts/openjpeg/opj_config_private.h
    scripts/bin2hex.c
    scripts/cmapcleanx.c
    scripts/cmapcleanz.c
    scripts/cmapdump.c
    scripts/cquote.c
    scripts/fontdump.c
    scripts/namedump.c
    source/cbz/mucbz.c
    source/cbz/muimg.c
    source/cbz/mutiff.c
    source/fitz/bbox-device.c
    source/fitz/bidi-impl.h
    source/fitz/bidi-std.c
    source/fitz/bidi.c
    source/fitz/bitmap.c
    source/fitz/buffer.c
    source/fitz/colorspace.c
    source/fitz/compressed-buffer.c
    source/fitz/context.c
    source/fitz/crypt-aes.c
    source/fitz/crypt-arc4.c
    source/fitz/crypt-md5.c
    source/fitz/crypt-sha2.c
    source/fitz/device.c
    source/fitz/document-all.c
    source/fitz/document.c
    source/fitz/draw-affine.c
    source/fitz/draw-blend.c
    source/fitz/draw-device.c
    source/fitz/draw-edge.c
    source/fitz/draw-glyph.c
    source/fitz/draw-imp.h
    source/fitz/draw-mesh.c
    source/fitz/draw-paint.c
    source/fitz/draw-path.c
    source/fitz/draw-scale-simple.c
    source/fitz/draw-unpack.c
    source/fitz/error.c
    source/fitz/filter-basic.c
    source/fitz/filter-dct.c
    source/fitz/filter-fax.c
    source/fitz/filter-flate.c
    source/fitz/filter-jbig2.c
    source/fitz/filter-leech.c
    source/fitz/filter-lzw.c
    source/fitz/filter-predict.c
    source/fitz/font.c
    source/fitz/ftoa.c
    source/fitz/function.c
    source/fitz/geometry.c
    source/fitz/getopt.c
    source/fitz/glyph.c
    source/fitz/halftone.c
    source/fitz/harfbuzz.c
    source/fitz/hash.c
    source/fitz/image.c
    source/fitz/jmemcust.c
    source/fitz/jmemcust.h
    source/fitz/link.c
    source/fitz/list-device.c
    source/fitz/load-bmp.c
    source/fitz/load-gif.c
    source/fitz/load-jpeg.c
    source/fitz/load-jpx.c
    source/fitz/load-jxr.c
    source/fitz/load-png.c
    source/fitz/load-tiff.c
    source/fitz/memento.c
    source/fitz/memory.c
    source/fitz/noto.c
    source/fitz/outline.c
    source/fitz/output-pcl.c
    source/fitz/output-ps.c
    source/fitz/output-pwg.c
    source/fitz/output.c
    source/fitz/paint-glyph.h
    source/fitz/path.c
    source/fitz/pixmap.c
    source/fitz/pool.c
    source/fitz/printf.c
    source/fitz/separation.c
    source/fitz/shade.c
    source/fitz/stext-device.c
    source/fitz/stext-output.c
    source/fitz/stext-paragraph.c
    source/fitz/stext-search.c
    source/fitz/store.c
    source/fitz/stream-open.c
    source/fitz/stream-prog.c
    source/fitz/stream-read.c
    source/fitz/string.c
    source/fitz/strtod.c
    source/fitz/strtof.c
    source/fitz/svg-device.c
    source/fitz/tempfile.c
    source/fitz/test-device.c
    source/fitz/text.c
    source/fitz/time.c
    source/fitz/trace-device.c
    source/fitz/transition.c
    source/fitz/tree.c
    source/fitz/ucdn.c
    source/fitz/unicodedata_db.h
    source/fitz/unzip.c
    source/fitz/util.c
    source/fitz/xml.c
    source/gprf/gprf-doc.c
    source/gprf/gprf-skeleton.c
    source/html/css-apply.c
    source/html/css-parse.c
    source/html/epub-doc.c
    source/html/html-doc.c
    source/html/html-font.c
    source/html/html-layout.c
    source/pdf/js/pdf-js-none.c
    source/pdf/js/pdf-js.c
    source/pdf/pdf-annot-edit.c
    source/pdf/pdf-annot.c
    source/pdf/pdf-appearance.c
    source/pdf/pdf-clean-file.c
    source/pdf/pdf-clean.c
    source/pdf/pdf-cmap-load.c
    source/pdf/pdf-cmap-parse.c
    source/pdf/pdf-cmap-table.c
    source/pdf/pdf-cmap.c
    source/pdf/pdf-colorspace.c
    source/pdf/pdf-crypt.c
    source/pdf/pdf-device.c
    source/pdf/pdf-encoding.c
    source/pdf/pdf-encodings.h
    source/pdf/pdf-event.c
    source/pdf/pdf-field.c
    source/pdf/pdf-font.c
    source/pdf/pdf-form.c
    source/pdf/pdf-function.c
    source/pdf/pdf-glyphlist.h
    source/pdf/pdf-graft.c
    source/pdf/pdf-image.c
    source/pdf/pdf-interpret.c
    source/pdf/pdf-lex.c
    source/pdf/pdf-metrics.c
    source/pdf/pdf-name-table.h
    source/pdf/pdf-nametree.c
    source/pdf/pdf-object.c
    source/pdf/pdf-op-buffer.c
    source/pdf/pdf-op-filter.c
    source/pdf/pdf-op-run.c
    source/pdf/pdf-outline.c
    source/pdf/pdf-page.c
    source/pdf/pdf-parse.c
    source/pdf/pdf-pattern.c
    source/pdf/pdf-pkcs7.c
    source/pdf/pdf-repair.c
    source/pdf/pdf-resources.c
    source/pdf/pdf-run.c
    source/pdf/pdf-shade.c
    source/pdf/pdf-store.c
    source/pdf/pdf-stream.c
    source/pdf/pdf-type3.c
    source/pdf/pdf-unicode.c
    source/pdf/pdf-write.c
    source/pdf/pdf-xobject.c
    source/pdf/pdf-xref.c
    source/tools/mjsgen.c
    source/tools/mudraw.c
    source/tools/murun.c
    source/tools/mutool.c
    source/tools/pdfclean.c
    source/tools/pdfcreate.c
    source/tools/pdfextract.c
    source/tools/pdfinfo.c
    source/tools/pdfmerge.c
    source/tools/pdfpages.c
    source/tools/pdfposter.c
    source/tools/pdfshow.c
    source/xps/xps-common.c
    source/xps/xps-doc.c
    source/xps/xps-glyphs.c
    source/xps/xps-gradient.c
    source/xps/xps-image.c
    source/xps/xps-link.c
    source/xps/xps-outline.c
    source/xps/xps-path.c
    source/xps/xps-resource.c
    source/xps/xps-tile.c
    source/xps/xps-util.c
    source/xps/xps-zip.c)

include_directories(include)

add_executable(mupdf_1_9a_source ${SOURCE_FILES})